--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -7,7 +7,7 @@
             <div class="page-header breadcrumb-wrap">
                 <div class="container">
                     <div class="breadcrumb">
-                        <a href="index.html" rel="nofollow">Home</a>
+                        <a href="/" rel="nofollow">Home</a>
 
                         <span></span> Your Cart
                     </div>
