--- a/views/user/a.ejs
+++ b/views/user/a.ejs
@@ -1830,3 +1830,22 @@
                       </nav>
                     </div>
                   </section>
+
+
+
+
+
+
+                  // payerId: payment.result.payer.payer.id,
+
+
+
+
+
+
+
+
+
+
+
+
